@@ -24,19 +24,23 @@ import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.eclipse.fordiac.ide.util.Utils;
 
-/** Class DelayedFiles
+/**
+ * Class DelayedFiles
  *
- * Handle multiple files that should only be written if all files were prepared without error. In case the files already
- * existed keep the existing version in a backup file. */
+ * Handle multiple files that should only be written if all files were prepared
+ * without error. In case the files already existed keep the existing version in
+ * a backup file.
+ */
 public class DelayedFiles {
 
-	/** internal class FileObject
+	/**
+	 * internal class FileObject
 	 *
-	 * encapsulates path and data of a file in memory (before writing) */
+	 * encapsulates path and data of a file in memory (before writing)
+	 */
 	private static final class FileObject {
 		private final Path path;
 		private final Iterable<? extends CharSequence> data;
@@ -56,10 +60,12 @@ public class DelayedFiles {
 		}
 	}
 
-	/** class StoredFiles
+	/**
+	 * class StoredFiles
 	 *
-	 * encapsulates file objects for old and new file an iterable of StoredFiles is returned after all files were
-	 * written */
+	 * encapsulates file objects for old and new file an iterable of StoredFiles is
+	 * returned after all files were written
+	 */
 
 	public static final class StoredFiles {
 		private final File oldFile;
@@ -81,33 +87,41 @@ public class DelayedFiles {
 
 	private final List<FileObject> storage;
 
-	/** constructor for class DelayedFiles
+	/**
+	 * constructor for class DelayedFiles
 	 *
-	 * prepares the storage and sets capacity to 2 elements since in the typical usecase a .cpp and a .h file will be
-	 * written */
+	 * prepares the storage and sets capacity to 2 elements since in the typical
+	 * usecase a .cpp and a .h file will be written
+	 */
 	public DelayedFiles() {
 		storage = new ArrayList<>(2);
 	}
 
-	/** store file data in memory for writing to disk later
+	/**
+	 * store file data in memory for writing to disk later
 	 *
 	 * @param path  file path to be written to
 	 * @param bytes data to be written as a CharSequence
 	 *
-	 * @return path to be written to to be compatible with java.nio.file.Files */
+	 * @return path to be written to to be compatible with java.nio.file.Files
+	 */
 	public Path write(final Path path, final CharSequence data) {
 		storage.add(new FileObject(path, data));
 		return path;
 	}
 
-	/** store file data in memory for writing to disk later
+	/**
+	 * store file data in memory for writing to disk later
 	 *
-	 * if any of the files to write is already present on disk a backup file of the existing file will be created.
+	 * if any of the files to write is already present on disk a backup file of the
+	 * existing file will be created.
 	 *
 	 * @param forceOverwrite if set no backupfile will be created
 	 *
-	 * @return Iterable of StoredFiles; contains File-Objects for old and new versions of the file. in case no
-	 *         backupfile is created old-File-Object will be null */
+	 * @return Iterable of StoredFiles; contains File-Objects for old and new
+	 *         versions of the file. in case no backupfile is created
+	 *         old-File-Object will be null
+	 */
 	public Iterable<StoredFiles> write(final boolean forceOverwrite) throws IOException {
 		final ArrayList<StoredFiles> ret = new ArrayList<>(storage.size());
 
@@ -128,9 +142,11 @@ public class DelayedFiles {
 		return ret;
 	}
 
-	/** check if any of the files to write is already present on disk
+	/**
+	 * check if any of the files to write is already present on disk
 	 *
-	 * @return true if any of the files already exist, false otherwise */
+	 * @return true if any of the files already exist, false otherwise
+	 */
 	public boolean exist() {
 		for (final FileObject fo : storage) {
 			if (fo.getPath().toFile().exists()) {
@@ -147,7 +163,7 @@ public class DelayedFiles {
 
 	/** retrieve an iterable of all filenames currently ready for writing */
 	public List<String> getFilenames() {
-		return storage.stream().map(item -> item.getPath().getFileName().toString()).collect(Collectors.toList());
+		return storage.stream().map(item -> item.getPath().getFileName().toString()).toList();
 	}
 
 }
