@@ -12,8 +12,6 @@
  *******************************************************************************/
 package org.eclipse.fordiac.ide.model.libraryElement.impl;
 
-import java.util.stream.Collectors;
-
 import org.eclipse.emf.common.util.EList;
 import org.eclipse.emf.ecore.InternalEObject;
 import org.eclipse.emf.ecore.util.DelegatingEcoreEList;
@@ -30,13 +28,13 @@ final class BaseFBTypeAnnotations {
 
 	static EList<Algorithm> getAlgorithm(final BaseFBType fbType) {
 		return new DelegatingEcoreEList.UnmodifiableEList<>((InternalEObject) fbType,
-				LibraryElementPackage.eINSTANCE.getBaseFBType_Algorithm(), fbType.getCallables().stream()
-				.filter(Algorithm.class::isInstance).map(Algorithm.class::cast).collect(Collectors.toList()));
+				LibraryElementPackage.eINSTANCE.getBaseFBType_Algorithm(),
+				fbType.getCallables().stream().filter(Algorithm.class::isInstance).map(Algorithm.class::cast).toList());
 	}
 
 	static EList<Method> getMethods(final BaseFBType fbType) {
 		return new DelegatingEcoreEList.UnmodifiableEList<>((InternalEObject) fbType,
-				LibraryElementPackage.eINSTANCE.getBaseFBType_Methods(), fbType.getCallables().stream()
-				.filter(Method.class::isInstance).map(Method.class::cast).collect(Collectors.toList()));
+				LibraryElementPackage.eINSTANCE.getBaseFBType_Methods(),
+				fbType.getCallables().stream().filter(Method.class::isInstance).map(Method.class::cast).toList());
 	}
 }
